feat(responsive): Add responsive navbar

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/navbar": "^2.0.27",
     "@nextui-org/popover": "^2.1.14",
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.17",
