--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-scroll-parallax": "^3.4.5"
+    "react-scroll-parallax": "^3.4.5",
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
